[build-system]
requires = ["setuptools >= 60.0.0", "wheel >= 0.30.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orats"
version = '0.0.1'
description = "Client SDK for the ORATS API."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
    { name = "Lucas Lofaro", email = "lucasmlofaro@gmail.com" },
]
keywords = ["options", "volatility", "orats"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    # 'Framework :: AsyncIO',
    # 'Framework :: Sphinx',
    'Intended Audience :: Financial and Insurance Industry',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: OS Independent',
]
dependencies = [
    "httpx~=0.23.0",
    "pydantic~=1.9.1",
]

[project.urls]
Homepage = "https://github.com/lucasmlofaro/orats-python"

[project.optional-dependencies]
dev = [
    "black~=22.6.0",
]
tests = [
    "mypy~=0.961",
    "pytest~=7.1.2",
    "tox~=3.25.1",
]
docs = [
    "sphinx~=5.0.2",
]

[tool.setuptools]
package-data = {"orats" = ["py.typed"]}
