[tool.poetry]
name = "orats"
version = "0.1.1-alpha"
description = "Client SDK for the ORATS API."
authors = ["Lucas Lofaro <lucasmlofaro@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/lucasmlofaro/orats-python"
documentation = "https://lucasmlofaro.github.io/orats-python"
keywords = ["options", "volatility", "orats"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    # 'Framework :: AsyncIO',
    # 'Framework :: Sphinx',
    'Intended Audience :: Financial and Insurance Industry',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: OS Independent',
]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "~=0.23.0"
pydantic = "~=1.9.1"

[tool.poetry.dev-dependencies]
black = "~=22.6.0"
mypy = "~=0.961"
pytest = "~=7.1.2"
tox = "~=3.25.1"
sphinx = "~=5.0.2"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/lucasmlofaro/orats-python/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
